fix(sector-2): fix all critical security issues in POS backend
- fix(sec-01): remove hardcoded MinIO credentials from MinIOConfig source code;
  read endpoint, access-key, secret-key, and bucket from application.yml with
  ${MINIO_*} env var overrides; update MinIOService to inject bucket via @Value

- fix(sec-02): stop returning full User entity (including BCrypt hash) from
  UserController.registerUser(); introduce UserResponse DTO (id, username, email,
  roles) — password is never serialized; return 201 Created instead of 200 OK

- fix(sec-03): make CORS allowed-origins config-driven via
  cors.allowed-origins property (comma-separated, ${CORS_ALLOWED_ORIGINS} env
  var); add PATCH method, expose Authorization/Content-Disposition headers,
  set preflight maxAge; add /api/register to permit-all list

- fix(sec-04): remove dead UserDetailsServiceImpl — never called in JWT/Keycloak
  auth flow; clarify auth strategy as Keycloak-only with local User profile store;
  add keycloakId field to User model to link JWT sub claim to local records;
  add findByKeycloakId() and findByEmail() to UserRepository

- fix(sec-05): add application-prod.yml with ddl-auto:validate, show-sql:false,
  hardened cookie settings (SameSite:Strict); all sensitive config (DB, Keycloak,
  MinIO, CORS) externalized to env vars with safe defaults in dev profile

- fix(pom): remove duplicate org.projectlombok:lombok dependency declaration
- fix(security): replace deprecated .jwt() with .jwt(jwt -> {}) in SecurityConfig
- fix(config): DB URL/credentials also externalized to ${DB_*} env vars

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>